@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,7 +27,6 @@ package com.sun.javatest.regtest.exec;
 
 import java.io.File;
 import java.io.PrintWriter;
-import java.io.UncheckedIOException;
 import java.nio.file.Path;
 import java.text.DateFormat;
 import java.util.ArrayList;
@@ -40,7 +39,6 @@ import java.util.Set;
 import java.util.regex.Pattern;
 
 import com.sun.javatest.Status;
-import com.sun.javatest.regtest.config.LibraryProperties;
 import com.sun.javatest.regtest.config.Locations;
 import com.sun.javatest.regtest.config.Locations.ClassLocn;
 import com.sun.javatest.regtest.config.Locations.LibLocn;
@@ -302,23 +300,6 @@ public class BuildAction extends Action
             compArgs.add("-XDignore.symbol.file=true");
         if (implicitOpt != null)
             compArgs.add(implicitOpt);
-
-        // read and add library-specific compilation properties
-        if (libLocn.isLibrary()) {
-            try {
-                var properties = LibraryProperties.of(libLocn);
-                if (properties.isEnablePreview()) {
-                    compArgs.add("--enable-preview");
-                    // "--enable-preview" requires either "--source" or "--release" to
-                    // confirm the expected source level. "--release" restricts
-                    // the visible API to the exported API, so use "--source" instead.
-                    compArgs.add("-source"); // use "-source" "N" for Java 11 and lower
-                    compArgs.add(String.valueOf(script.getTestJDKVersion().major));
-                }
-            } catch (UncheckedIOException exception) {
-                throw new TestRunException("Reading library properties failed: " + libLocn, exception);
-            }
-        }
 
         for (File file: files)
             compArgs.add(file.getPath());
